SPARK-1371 added tooltip to otr button
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12479 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/otr/src/resources/i18n/otrplugin_i18n_de.properties
+++ b/src/plugins/otr/src/resources/i18n/otrplugin_i18n_de.properties
@@ -13,7 +13,7 @@ otr.key.not.verified.title = Schlüssel nicht beglaubigt
 otr.question.verify = Beglaubigen?
 otr.key.not.verified.text = Folgender Schlüssel ist nicht beglaubigt:
 otr.start.session.with = OTR Sitzung mit {0}
-
+otr.chat.button.tooltip = Nachrichtenverschlüsselung
 otr.not.enabled = Sie haben eine OTR Anfrage empfagen. Sie sollten OTR in den Einstellungen aktivieren.
 otr.chat.is.still.encrypted = OTR Sitzung aktiv. Nachrichten werden verschlüsselt. 
 #Table Columns
