--- a/src/plugins/otr/src/resources/i18n/otrplugin_i18n.properties
+++ b/src/plugins/otr/src/resources/i18n/otrplugin_i18n.properties
@@ -15,7 +15,7 @@ otr.key.not.verified.text = Following key is not verified!
 otr.start.session.with = OTR encrypted Session with {0}
 otr.not.enabled = You recieved an OTR request. You should enable OTR in preferences.
 otr.chat.is.still.encrypted = This conversation is still encrypted. 
-
+otr.chat.button.tooltip = Message encryption
 #Table Columns
 otr.table.jid = User's JID
 otr.table.public.key = Public key
