SPARK-1386 prevent privacy plugin from loading if not supported by server
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12510 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -1058,7 +1058,7 @@ privacy.status.menu.entry = Privacy Lists
 privacy.name.for.default.list = Default
 privacy.button.no.list.selected = No list selected
 privacy.menuitem.deactivate.current.list = Deactivate {0}
-
+privacy.label.not.supported = Privacy lists are not supported by server. 
 
 ##Stunfallback in media settings
 stun.border.label = STUN fallback server
