--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -949,6 +949,8 @@ privacy.status.menu.entry = Privatsphäre
 privacy.name.for.default.list = Standard
 privacy.button.no.list.selected = Keine list ausgewählt
 privacy.menuitem.deactivate.current.list = {0} deaktivieren
+privacy.label.not.supported = Privatsphärelisten werden vom Server leider nicht unterstüzt.
+
 
 ##Stunfallback in media settings
 stun.border.label = STUN Ausweichserver
