SPARK-1333 updated lithuanian translation
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12513 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -288,7 +288,7 @@ button.view.profile = Per\u017ei\u016br\u0117ti profil\u012f
 button.view.tasklist = Per\u017ei\u016br\u0117ti u\u017eduotis
 button.re.detect = &Aptikti i\u0161 naujo
 
-checkbox.allow.buzz = &Leisti Jus i\u0161kviesti
+checkbox.allow.buzz = &Leisti pa\u0161nekovams purtyti j\u016bs\u0173 pokalbio lang\u0105
 checkbox.auto.discover.port = &Automatinis serverio ir jo prievado aptikimas
 checkbox.auto.login = Automati\u0161kai prisijungti
 checkbox.disable.chat.history = &I\u0161jungti pokalbi\u0173 \u017eurnal\u0105
@@ -398,7 +398,7 @@ label.local.time = &Vietinis laikas
 label.message = \u017dinu&t\u0117
 label.message.style = \u017dinut\u0117s &stilius
 label.middle.name = &Antras vardas
-label.minutes.before.stale.chat = &Per kiek minu\u010di\u0173 neaktyvus kambarys u\u017esidaro
+label.minutes.before.stale.chat = &Po kiek minu\u010di\u0173 neaktyvus kambarys pasidaro blankus
 label.mobile = &Mobilaus tel. nr.
 label.name = &Vardas
 label.network = Tin&klas
@@ -473,6 +473,7 @@ menuitem.add.groupchat.popname = Parodyti i\u0161\u0161okant\u012f prane\u0161im
 menuitem.add.groupchat.showjoinleavemessage = Rodyti informacij\u0105 apie prisijungim\u0105 ir atsijungim\u0105
 menuitem.add.groupchat.showrolesinsteadofstatus = Rodyti pokalbio roles vietoje b\u016bsenos ikon\u0173
 menuitem.add.groupchat.auto.accept.invite = &Automati\u0161kai priimti grupinio pokalbio kvietimus
+menuitem.add.groupchat.random.colors = Vardams suteikiamos &atsitiktin\u0117s spalvos
 menuitem.always.on.top = Visada vir\u0161uje
 menuitem.alert.when.online = Informuoti, kai abonentas taps pasiekiamas
 menuitem.ban = U\u017edrausti
@@ -586,6 +587,8 @@ message.autenticating = Autentifikavimas
 message.away.idle = Neaktyvus
 message.bookmark.temporary.room.error = Laikini kambariai negali b\u016bti pasi\u017eymimi.
 message.broadcast.from = \u017dini\u0105 transliavo {0}
+message.broadcast.no.user.selected = Pra\u0161om pasirinkti bent vien\u0105 adresat\u0105
+message.broadcast.no.text = Pra\u0161om \u012fvesti \u017einut\u0119 transliavimui
 message.broadcast.message.sent = Transliuota \u017einia jau i\u0161si\u0173sta
 message.broadcast.to = \u012eveskite k\u0105 transliuosite gav\u0117jams {0}
 message.broadcasted.to = Transliavote \u0161iems abonentams:\n {0}
@@ -649,6 +652,8 @@ message.file.transfer.rejected = Bylos siuntimo nepatvirtino {0}.
 message.file.transfer.notification = Bylos siuntimo prane\u0161imas
 message.file.transfer.short.message = Jums siun\u010diamas byla, kurios pavadinimas: 
 message.file.transfer.chat.window = Bylos persiuntimo pra\u0161ymas:
+message.file.transfer.file.too.big.error = Pasirinkta byla per didel\u0117.\nMaksimalus bylos dydis {0}. Pasirinkta byla yra {1} dyd\u017eio.
+message.file.transfer.file.too.big.warning = Pasirinkta byla yra labai didel\u0117.\nT\u0119sti vis tiek?
 message.find.conference.services = Konferencij\u0173 suradimas
 message.forbidden.error = Serveris atsiunt\u0117 prane\u0161im\u0105 apie baisi\u0105 klaid\u0105. Tokios netoleruosime!
 message.gateway.username.error = Turi b\u016bti pateiktas abonento vardas
@@ -697,7 +702,7 @@ message.password.private.room.error = Nurodykite privataus kambario slapta\u017e
 message.passwords.no.match = Nesutapo slapta\u017eod\u017eiai.
 message.please.join.in.conference = Kvie\u010diame apsilankyti ir dalyvauti naujai sukurtame pokalbi\u0173 kambaryje.
 message.plugins.not.available = Nepavyksta prisijungti prie pried\u0173 saugyklos.
-message.prompt.plugin.uninstall = Ar tikrai norite pa\u0161alinti program\u0105 {0}?
+message.prompt.plugin.uninstall = Ar tikrai norite i\u0161jungti pried\u0105 {0}?
 message.received.file = Gavote bylas, Siunt\u0117jas {0}.
 message.receiving.file = Gaunate bylas. Siunt\u0117jas {0}
 message.reconnect.attempting = Bandom jungtis i\u0161 naujo\u2026
@@ -820,6 +825,7 @@ tab.contacts = Adresin\u0117
 tab.general = Bendra
 tab.home = Namai
 tab.installed.plugins = \u012ediegti priedai
+tab.deactivated.plugins = I\u0161jungti priedai
 tab.personal = Asmuo
 tab.proxy = Tarpinis serveris
 tab.sso = SSO
