SPARK-1333 updated spark language lithuanian and polish
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12520 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -1017,7 +1017,7 @@ privacy.menu.add.contacts = Prid\u0117ti adresat\u0105 \u012f s\u0105ra\u0161\u0
 privacy.menu.add.groups = Prid\u0117ti grup\u0119 \u012f s\u0105ra\u0161\u0105
 privacy.menu.add.rem.items = I\u0161trinti {0} punktus i\u0161 s\u0105ra\u0161o
 privacy.menu.remove = I\u0161trinti
-privacy.menu.avtivate.list = Aktyvuoti
+privacy.menu.activate.list = Aktyvuoti
 privacy.menu.default.list = Nustatyti kaip numatyt\u0105j\u012f
 privacy.menu.add.list = Prid\u0117ti s\u0105ra\u0161\u0105
 privacy.menu.remove.list = I\u0161trinti s\u0105ra\u0161\u0105
@@ -1027,6 +1027,7 @@ privacy.status.menu.entry = Privatumo s\u0105ra\u0161ai
 privacy.name.for.default.list = Numatytasis
 privacy.button.no.list.selected = Nepasirinktas s\u0105ra\u0161as
 privacy.menuitem.deactivate.current.list = Deaktyvuoti {0}
+privacy.label.not.supported = Privatumo s\u0105ra\u0161ai nepalaikomi serverio 
 
 ##Stunfallback in media settings
 stun.border.label = STUN pagalbinis serveris
