--- a/src/resources/i18n/spark_i18n_pl.properties
+++ b/src/resources/i18n/spark_i18n_pl.properties
@@ -295,6 +295,9 @@
 ##     Added key: 'title.login.no.account'
 ##     Added key: 'message.file.transfer.file.too.big.error'
 ##     Added key: 'message.file.transfer.file.too.big.warning'
+##     Added key: 'menuitem.add.groupchat.random.colors'
+##     Added key: 'tab.deactivated.plugins'
+##     Added key: 'privacy.label.not.supported'
 ##
 ##     Polish translation made by Martini26
 
@@ -580,6 +583,7 @@ menuitem.add.groupchat.popname = Pokazuj wyskakuj\u0105ce okienko kiedy kto\u015
 menuitem.add.groupchat.showjoinleavemessage = Wy\u015bwietlaj wiadomo\u015bci o do\u0142\u0105czeniu i opuszczeniu u\u017cytkownik\u00f3w
 menuitem.add.groupchat.showrolesinsteadofstatus = Pokazuj ikony r\u00f3l zamiast ikon statusu
 menuitem.add.groupchat.auto.accept.invite = Automatycznie akceptuj zaproszenia do rozm\u00f3w grupowych 
+menuitem.add.groupchat.random.colors = Nazwiska maj\u0105 losowe kolory
 menuitem.always.on.top = Zawsze na wierzchu
 menuitem.alert.when.online = Powiadom o dost\u0119pno\u015bci u\u017cytkownika
 menuitem.ban = Zablokuj
@@ -809,7 +813,7 @@ message.password.private.room.error = Podaj poprawne has\u0142o do pokoju
 message.passwords.no.match = Has\u0142a nie s\u0105 identyczne
 message.please.join.in.conference = Do\u0142\u0105cz do mnie w konferencji
 message.plugins.not.available = Nie mo\u017cna skontaktowa\u0107 si\u0119 z repozytorium wtyczek
-message.prompt.plugin.uninstall = Czy jeste\u015b pewien, \u017ce chcesz odinstalowa\u0107 {0}?
+message.prompt.plugin.uninstall = Czy jeste\u015b pewien, \u017ce chcesz wy\u0142\u0105czy\u0107 {0}?
 message.received.file = Otrzyma\u0142e\u015b plik od {0}
 message.receiving.file = Odbierasz plik od {0}
 message.reconnect.attempting = Pr\u00f3buj\u0119 ponownie po\u0142\u0105czy\u0107
@@ -933,6 +937,7 @@ tab.contacts = Kontakty
 tab.general = Og\u00f3lne
 tab.home = Dom
 tab.installed.plugins = Zainstalowane wtyczki
+tab.deactivated.plugins = Wy\u0142\u0105czone wtyczki
 tab.personal = Osobiste
 tab.proxy = Proxy
 tab.sso = SSO
@@ -1133,6 +1138,7 @@ privacy.status.menu.entry = Listy prywatno\u015bci
 privacy.name.for.default.list = Domy\u015blna
 privacy.button.no.list.selected = Nie wybrano listy
 privacy.menuitem.deactivate.current.list = Deaktywuj obecn\u0105 list\u0119 {0}
+privacy.label.not.supported = Prywatne listy nie s\u0105 obs\u0142ugiwane przez serwer.
 
 stun.border.label = Awaryjny serwer STUN
 stun.server.addr = Serwer STUN:
