SPARK-1388 typo activate
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12521 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -1048,7 +1048,7 @@ privacy.menu.add.contacts = Add Contacts to list
 privacy.menu.add.groups = Add Groups to list
 privacy.menu.add.rem.items = Remove {0} items from list
 privacy.menu.remove = Remove
-privacy.menu.avtivate.list = Activate
+privacy.menu.activate.list = Activate
 privacy.menu.default.list = Set as default
 privacy.menu.add.list = Add list
 privacy.menu.remove.list = Remove list
