--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -939,7 +939,7 @@ privacy.menu.add.contacts = Kontakt zur Liste hinzufügen
 privacy.menu.add.groups = Gruppe zur Liste hinzufügen
 privacy.menu.add.rem.items = Entferne {0} Elemente von der Liste
 privacy.menu.remove = Entferne 
-privacy.menu.avtivate.list = Aktivieren
+privacy.menu.activate.list = Aktivieren
 privacy.menu.default.list = Als Standard setzen
 privacy.menu.add.list = Liste hinzufügen
 privacy.menu.remove.list = Liste entfernen
