--- a/src/resources/i18n/spark_i18n_pl.properties
+++ b/src/resources/i18n/spark_i18n_pl.properties
@@ -1128,7 +1128,7 @@ privacy.menu.add.contacts = Dodaj kontakty do listy
 privacy.menu.add.groups = Dodaj grupy do listy
 privacy.menu.add.rem.items = Usu\u0144 {0} przedmiot\u00f3w z listy
 privacy.menu.remove = Usu\u0144
-privacy.menu.avtivate.list = Aktywuj
+privacy.menu.activate.list = Aktywuj
 privacy.menu.default.list = Ustaw jako domy\u015blne
 privacy.menu.add.list = Dodaj list\u0119
 privacy.menu.remove.list = Usu\u0144 list\u0119
