expand ability to customize spark if you want to build your own branded version
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12543 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -382,7 +382,8 @@ label.na = n/a
 label.cell = Cell
 label.work = Work
 label.home = Home
-label.accounts = A&ccounts
+label.accounts = A&ccounts#
+label.passwordreset = Password reset
 label.add.conference.service = Add conference service
 label.add.jid = Add JID
 label.add.task = Add task
