--- a/src/resources/i18n/spark_i18n_de.properties
+++ b/src/resources/i18n/spark_i18n_de.properties
@@ -259,6 +259,7 @@ label.host = &Host
 label.resource = &Ressource
 label.protocol = &Protokoll
 label.accounts = A&ccounts
+label.passwordreset = Passwort reset
 label.transfer.timeout = &Zeitspanne bis zum Abbruch des Transfers (min):
 label.transfer.download.directory = &Download Verzeichnis:
 label.find = &Finden
