SPARK-1381: UI checkbox
add checkbox to enable/disable automatically invitation to bookmarked room

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12570 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -597,6 +597,7 @@ menuitem.expand.all.groups = Expand all groups
 menuitem.collapse.all.groups = Collapse all groups
 menuitem.inivite.again = Invite again
 menuitem.chatframe.option = Options
+menuitem.add.groupchat.invitetobookmark = Automatically invite users to bookmarked room
 
 message.invite.to.groupchat = {0} is inviting you to join a group chat
 message = Message
