SPARK-1333: Update Lithuanian translation for: "Automatically invite users to bookmarked room"
added translation in spark_i18n_lt.properties

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12578 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -568,6 +568,8 @@ menuitem.expand.all.groups = Vis\u0173 grupi\u0173 i\u0161skleidimas
 menuitem.collapse.all.groups = Vis\u0173 grupi\u0173 sutraukimas
 menuitem.inivite.again = V\u0117l pakviesti
 menuitem.chatframe.option = Parinktys
+menuitem.add.groupchat.invitetobookmark = Automati\u0161kai kviesti vartotojus \u012f pa\u017eym\u0117t\u0105 kambar\u012f
+
 message.invite.to.groupchat = {0} Jus pakviet\u0117 prisijungti \u012f pokalbi\u0173 grup\u0119.
 message = Transliuojamas prane\u0161imas
 message.account.create = Naujos paskyros suk\u016brimas
