applied spark_i18n_zh_CN.properties.patch by tim jentz for spark-1418 issue. patch includes changes from spark_i18n_zh_CN.properties by yuxing, attached by wroot.
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12586 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n_zh_CN.properties
+++ b/src/resources/i18n/spark_i18n_zh_CN.properties
@@ -202,6 +202,27 @@
 
 ##Added\ key = 'message.enter.qq'
 
+## 2.6.4
+##     Added key: 'menuitem.add.groupchat.showrolesinsteadofstatus'
+##     Added key: 'menuitem.add.groupchat.auto.accept.invite'
+##     Added key: 'menuitem.add.groupchat.random.colors'
+##     Added key: 'label.time.till.idlemessage'
+##     Added key: 'lookandfeel.select'
+##     Added key: 'lookandfeel.change.now'
+##     Added key: 'lookandfeel.color.label'
+##     Added key: 'lookandfeel.color.red'
+##     Added key: 'lookandfeel.color.green'
+##     Added key: 'lookandfeel.color.blue'
+##     Added key: 'lookandfeel.color.opacity'
+##     Added key: 'lookandfeel.color.saved'
+##     Added key: 'checkbox.transport.tab.setting'
+##     Added key: 'checkbox.conference.tab.setting'
+##     Added key: 'checkbox.reconnet.info'
+##     Added key: 'checkbox.reconnect.panel.big'
+##     Added key: 'checkbox.reconnect.panel.small'
+##     Added key: 'checkbox.reconnect.panel.icon'
+
+
 accept = \u63a5\u53d7
 
 action.clear      = \u6e05\u9664
@@ -285,6 +306,10 @@ checkbox.disable.prev.chat.history        = \u4e0d\u663e\u793a\u4ee5\u5f80\u804a
 checkbox.enable.emoticons                 = (&O) \u663e\u793a\u8868\u60c5
 checkbox.idle.enabled                     = (&I) \u5141\u8bb8\u7a7a\u95f2\u7b49\u5f85
 checkbox.launch.on.startup                = (&L) \u968f\u7cfb\u7edf\u542f\u52a8
+checkbox.reconnet.info = \u6307\u5b9a\u91cd\u65b0\u8fde\u63a5\u7684\u663e\u793a\u65b9\u5f0f\uff1a
+checkbox.reconnect.panel.big = \u6309\u7167\u9762\u677f\u65b9\u5f0f\u663e\u793a
+checkbox.reconnect.panel.small = \u6309\u7167\u8054\u7cfb\u4eba\u5206\u7ec4\u65b9\u5f0f\u663e\u793a
+checkbox.reconnect.panel.icon = \u6309\u7167\u56fe\u6807\u65b9\u5f0f\u663e\u793a
 checkbox.notify.systemtray                = \u7cfb\u7edf\u6258\u76d8\u663e\u793a\u65b0\u6d88\u606f
 checkbox.notify.typing.systemtray         = \u7cfb\u7edf\u6258\u76d8\u663e\u793a\u6253\u5b57\u4fe1\u606f
 checkbox.notify.user.comes.online         = \u6709\u7528\u6237\u4e0a\u7ebf\u65f6\u901a\u77e5
@@ -314,6 +339,8 @@ checkbox.use.proxy.server                 = (&U) \u4f7f\u7528\u4ee3\u7406\u670d\
 checkbox.use.specify.below                = \u8bf4\u660e\u5982\u4e0b
 checkbox.use.system.look.and.feel         = (&F) \u4f7f\u7528\u7cfb\u7edf\u5916\u89c2(\u8981\u6c42\u91cd\u65b0\u542f\u52a8)
 checkbox.window.to.front                  = (&B) \u7a97\u53e3\u7f6e\u4e8e\u6700\u524d\u9762
+checkbox.transport.tab.setting = \u5728\u6807\u7b7e\u680f\u4e0a\u4e2d\u663e\u793a\u53ef\u7528\u7684\u4f20\u8f93\u65b9\u5f0f(\u8981\u6c42\u91cd\u65b0\u542f\u52a8)
+checkbox.conference.tab.setting = \u5728\u6807\u7b7e\u680f\u4e0a\u663e\u793a\u4f1a\u8bae\u5ba4\u670d\u52a1(\u8981\u6c42\u91cd\u65b0\u542f\u52a8)
 
 close = \u5173\u95ed
 
@@ -436,6 +463,7 @@ label.state.and.province          = (&T) \u5dde/\u7701
 label.street.address              = (&S) \u8857\u9053\u5730\u5740
 label.time                        = \u65f6\u95f4\uff1a {0}
 label.time.till.idle              = (&T) \u7a7a\u95f2\u91cd\u62e8\u65f6\u95f4(\u5206\u949f)
+label.time.till.idlemessage       = (&E) \u7a7a\u95f2\u81ea\u52a8\u6d88\u606f
 label.timeformat                  = Use {0}
 label.transfer.download.directory = (&D) \u4e0b\u8f7d\u76ee\u5f55\uff1a
 label.transfer.timeout            = (&T) \u4f20\u8f93\u8d85\u65f6(\u5206\u949f) \uff1a
@@ -461,6 +489,9 @@ menuitem.add.groupchat.myname               = \u9ad8\u4eae\u6211\u7684\u540d\u5b
 menuitem.add.groupchat.mytext               = \u9ad8\u4eae\u6211\u7684\u6587\u5b57
 menuitem.add.groupchat.popname              = \u63d0\u5230\u6211\u540d\u5b57\u65f6\u5f39\u51fa
 menuitem.add.groupchat.showjoinleavemessage = \u663e\u793a\u52a0\u5165\u9000\u51fa\u4fe1\u606f
+menuitem.add.groupchat.showrolesinsteadofstatus = \u663e\u793a\u804a\u5929\u89d2\u8272\u56fe\u6807\u800c\u4e0d\u662fPresence\u56fe\u6807
+menuitem.add.groupchat.auto.accept.invite = \u81ea\u52a8\u63a5\u6536\u7fa4\u804a\u9080\u8bf7
+menuitem.add.groupchat.random.colors 		= \u540d\u5b57\u663e\u793a\u968f\u673a\u989c\u8272
 menuitem.alert.when.online                  = \u7528\u6237\u5728\u7ebf\u65f6\u663e\u793a\u901a\u77e5
 menuitem.always.on.top                      = \u4e3b\u9762\u677f\u603b\u5728\u6700\u524d\u9762
 menuitem.ban                                = \u7981\u6b62
@@ -976,6 +1007,16 @@ tooltip.view.readme      = \u67e5\u770b ReadMe
 
 tree.conference.services = \u4f1a\u8bae\u670d\u52a1
 tree.users.in.room       = \u5728\u623f\u95f4\u7684\u4f7f\u7528\u8005
+
+lookandfeel.select = \u9009\u62e9\u89c6\u611f
+lookandfeel.change.now = \u7acb\u5373\u6539\u53d8
+
+lookandfeel.color.label = \u989c\u8272
+lookandfeel.color.red = \u7ea2
+lookandfeel.color.green = \u7eff
+lookandfeel.color.blue = \u84dd
+lookandfeel.color.opacity = \u900f\u660e\u5ea6
+lookandfeel.color.saved = \u989c\u8272\u4fdd\u5b58\u6210\u529f
 
 unfiled = \u6211\u7684\u8054\u7cfb\u4eba
 
