--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -1067,5 +1067,10 @@ stun.border.label = STUN fallback server
 stun.server.addr = Stun Server:
 stun.server.port = Stun Port:
 
+composing = Your friend is typing...
+paused = Your friend has stopped typing
+active = Your friend is paying attention
+inactive = Your friend is doing something else
+gone = Your friend is not participating
 
 #!#
