SPARK-891: insert participant nickname in notification message
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@12899 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -1067,10 +1067,10 @@ stun.border.label = STUN fallback server
 stun.server.addr = Stun Server:
 stun.server.port = Stun Port:
 
-composing = Your friend is typing...
-paused = Your friend has stopped typing
-active = Your friend is paying attention
-inactive = Your friend is doing something else
-gone = Your friend is not participating
+composing = {0} is typing...
+paused = {0} has stopped typing
+active = {0} is paying attention
+inactive = {0} is doing something else
+gone = {0} is doing something else
 
 #!#
