SPARK-1521: Add invisible presence state
Patch from Slava Durin - Thanks Slava!
-new checkbox on Login Dialog that offers the option to login as invisible
-new presence (invisible) added on the dropdown menu in the Status bar. The user can anytime go invisible

git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@13597 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -325,6 +325,7 @@ button.re.detect = &Re-detect
 checkbox.allow.buzz = Allow users to &buzz you
 checkbox.auto.discover.port = Automatically discover host and port
 checkbox.auto.login = &Auto login
+checkbox.login.as.invisible = &Login as invisible
 checkbox.disable.chat.history = &Disable chat history
 checkbox.disable.prev.chat.history = Disable &showing previous conversation in chat
 checkbox.enable.emoticons = E&nable emoticons
@@ -859,6 +860,8 @@ status.free.to.chat = Free to chat
 status.on.phone = On the phone
 status.online = Online
 status.pending = Pending
+status.invisible = Invisible
+status.offline = Offline
 
 tab.available.plugins = Available plugins
 tab.avatar = Avatar
