SPARK-1407: This patch includes an option in the spark preferences, to switch the direction of the messages, sorted by date.
The default sorting is ascending, so the older messages are on top.
To change the sorting you could also set HISTORY_SORT_DATEASC= to true or false in your spark.properties file.

Also, i reduced the sorting option to one month per page, one year per page and all on one page.
Default at this is one month per page.


git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@13715 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -220,6 +220,14 @@
 ##     Added key: 'menuitem.add.groupchat.showrolesinsteadofstatus'
 ## 	   Added key: 'checkbox.click.single.tray'
 ## 2.7.0 beta 1
+##	   Added key: 'message.search.period.month.one'
+##	   Added key: 'message.search.period.year.one'
+##	   Added key: 'message.search.period.none'
+## 	   Added key: 'message.search.page.timeperiod'
+## 	   Added key: 'message.search.page.counter'
+## 	   Added key: 'message.search.page.right'
+## 	   Added key: 'message.search.page.left'
+##    Added key: 'checkbox.sort.asc.history'
 ##	   Added key: 'message.file.transfer.dirnull'
 ##     Added key: 'message.file.transfer.nodir'
 ##     Added key: 'message.file.transfer.cantwritedir'
@@ -327,6 +335,7 @@ checkbox.auto.discover.port = Automatically discover host and port
 checkbox.auto.login = &Auto login
 checkbox.login.as.invisible = &Login as invisible
 checkbox.disable.chat.history = &Disable chat history
+checkbox.sort.asc.history = Sort messages in contact history by date ascending
 checkbox.disable.prev.chat.history = Disable &showing previous conversation in chat
 checkbox.enable.emoticons = E&nable emoticons
 checkbox.idle.enabled = &Idle enabled
@@ -851,6 +860,13 @@ message.your.voice.revoked = Your voice has been revoked
 message.groupchat.require.password = This group chat room requires a password to enter
 message.groupchat.registered.member = Successfully registered with {0}
 message.search.for.history = Search conversation history
+message.search.period.month.one = one month per page
+message.search.period.year.one = one year per page 
+message.search.period.none = show all on one page
+message.search.page.timeperiod = choose the timespan of messages, which are displayed per page
+message.search.page.counter = the current index of your page and the amount of all pages
+message.search.page.right = navigate one page forward
+message.search.page.left = navigate one page backward
 
 status.away = Away
 status.custom.messages = Custom messages
