SPARK-1491: Update Polish translation -commit the latest i18n_pl changes to trunk
git-svn-id: http://svn.igniterealtime.org/svn/repos/spark/trunk@13729 b35dd754-fafc-0310-a699-88a17e54d16e

--- a/src/plugins/otr/src/resources/i18n/otrplugin_i18n_pl.properties
+++ b/src/plugins/otr/src/resources/i18n/otrplugin_i18n_pl.properties
@@ -1,5 +1,5 @@
 
-# Plik jêzykowy Panelu OTR
+# Plik jÃªzykowy Panelu OTR
 
 otr.title = Komunikacja szyfrowana
 otr.list.entry =  Szyfrowana komunikacja
