--- a/src/plugins/roar/src/resources/i18n/roar_i18n_pl.properties
+++ b/src/plugins/roar/src/resources/i18n/roar_i18n_pl.properties
@@ -1,5 +1,5 @@
 
-# Plik jêzykowy Panelu ROAR
+# Plik jÃªzykowy Panelu ROAR
 
 roar.settings = Ustawienia ROAR
 roar.enabled = W\u0142\u0105cz wyskakuj\u0105ce powiadomienia
