--- a/src/resources/i18n/spark_i18n_pl.properties
+++ b/src/resources/i18n/spark_i18n_pl.properties
@@ -302,13 +302,15 @@
 ## 2.7.0 Beta 1 25-04-2012
 ##
 ##     Changed key: 'Automatically invite users to bookmarked room'
-##     Changed 'przedmioty' na 'elementy' we wtyczce prywatnoœci
-##     Changed key: 'Nieprzezroczystoœæ na Przezroczystoœæ'
+##     Changed 'przedmioty' na 'elementy' we wtyczce prywatnoï¿½ci
+##     Changed key: 'Nieprzezroczystoï¿½ï¿½ na Przezroczystoï¿½ï¿½'
 ##
 ##     18-05-2012 do wersji 13064, #566
 ##     Added key: 'checkbox.click.single.tray'
 ##
-##     Polskie tlumaczenie wykonane przez Martini26 - korekty mile widziane - marek_marcin@o2.pl
+##     Aktualizacja do wersji 2.6.3 build #589 29-03-2013
+##     
+##     Polskie tlumaczenie wykonane przez marek_marcin@o2.pl (Martini26) - korekty mile widziane
 
 accept = Akceptuj
 active = Aktywny
@@ -410,6 +412,7 @@ button.re.detect = Wykryj ponownie
 checkbox.allow.buzz = Zezw\u00f3l u\u017cytkownikom na przesy\u0142anie alert\u00f3w
 checkbox.auto.discover.port = Automatycznie wykryj hosta i port
 checkbox.auto.login = Automatyczne logowanie
+checkbox.login.as.invisible = Zaloguj jako niewidoczny
 checkbox.disable.chat.history = Wy\u0142\u0105cz histori\u0119 rozm\u00f3w
 checkbox.disable.prev.chat.history = Wy\u0142\u0105cz histori\u0119 rozmowy w okienku
 checkbox.enable.emoticons = W\u0142\u0105cz emotikony
@@ -461,7 +464,7 @@ group.comma.delimited = Rozdzielone przecinkiem
 group.conferences.found = Znalezione us\u0142ugi konferencji
 group.connection = Po\u0142\u0105czenie
 group.empty = W tej grupie nie ma aktywnych kontakt\u00f3w
-group.general.information = Informacje og\u00f3lne 
+group.general.information = Zmiana has\u0142a
 group.login.information = Informacje o logowaniu
 group.notification.options = Opcje powiadomie\u0144
 group.offline = Grupa u\u017cytkownik\u00f3w niedost\u0119pnych
@@ -772,11 +775,15 @@ message.file.exists.question = Plik ju\u017c istnieje, zast\u0105pi\u0107?
 message.file.size = Rozmiar pliku: {0}
 message.file.transfer.canceled = Anulowa\u0142e\u015b wysy\u0142anie pliku
 message.file.transfer.rejected = Wysy\u0142anie pliku nie zosta\u0142o zaakceptowane przez {0}
+message.file.transfer.dirnull = Katalog dla pobieranego pliku jest niew\u0142a\u015bciwy
+message.file.transfer.nodir = Katalog dla pobieranego pliku nie istnieje
+message.file.transfer.cantwritedir = Nie mo\u017cna zapisa\u0107 pobieranego pliku w katalogu
 message.file.transfer.notification = Powiadomienie o wysy\u0142aniu pliku
 message.file.transfer.short.message = chce wys\u0142a\u0107 plik:
 message.file.transfer.chat.window = Czy chcesz odebra\u0107 plik:
 message.file.transfer.file.too.big.error = Wybrany plik jest za du\u017cy. Maksymalny rozmiar pliku to {0} wybrany plik ma {1}
 message.file.transfer.file.too.big.warning = Wybrany plik jest za du\u017cy. Kontynuowa\u0107?
+message.file.transfer.direrror.setdir = Kliknij aby zmieni\u0107 katalog
 message.find.conference.services = Znajd\u017a us\u0142ugi konferencyjne
 message.forbidden.error = Otrzymano niedozwolony b\u0142\u0105d z serwera
 message.gateway.username.error = Pole 'u\u017cytkownik' nie mo\u017ce by\u0107 puste
@@ -940,6 +947,8 @@ status.free.to.chat = Mog\u0119 rozmawia\u0107
 status.on.phone = Telefonuj\u0119
 status.online = Dost\u0119pny
 status.pending = Oczekuj\u0105cy
+status.invisible = Niewidoczny
+status.offline = Niedost\u0119pny
 
 tab.available.plugins = Dost\u0119pne wtyczki
 tab.avatar = Awatar
