updated lithuanian translation - thanks wroot

--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -291,7 +291,9 @@ button.re.detect = &Aptikti i\u0161 naujo
 checkbox.allow.buzz = &Leisti pa\u0161nekovams purtyti j\u016bs\u0173 pokalbio lang\u0105
 checkbox.auto.discover.port = &Automatinis serverio ir jo prievado aptikimas
 checkbox.auto.login = Automati\u0161kai prisijungti
+checkbox.login.as.invisible = &Prisijungti nematomam
 checkbox.disable.chat.history = &I\u0161jungti pokalbi\u0173 \u017eurnal\u0105
+checkbox.sort.asc.history = R\u0173\u0161iuo&ti \u017einutes kontakto istorijoje datos did\u0117jimo tvarka
 checkbox.disable.prev.chat.history = &I\u0161jungti ankstesni\u0173 pokalbi\u0173 rodym\u0105
 checkbox.enable.emoticons = &Rodyti jaustukus
 checkbox.idle.enabled = \u012ejungti neveikos rodym\u0105
@@ -313,10 +315,11 @@ checkbox.private.room = Priva&tus Kambarys
 checkbox.save.password = &\u012esiminti slapta\u017eod\u012f
 checkbox.show.avatars.in.contactlist = Adres\u0173 s\u0105ra\u0161e rodyti ps&eudoportretus
 checkbox.show.notifications.in.conference = &Rodyti prane\u0161imus konferencij\u0173 kambariuose
-checkbox.show.time.in.chat.window = &Pokalbio lange rodyti laik\u0105
+checkbox.show.time.in.chat.window = P&okalbio lange rodyti laik\u0105
 checkbox.show.toaster = Rodyti i\u0161\u0161okant\u012f prane\u0161im\u0105
 checkbox.split.chat.window = Lango \u012ft&virtinimas (reik\u0117s i\u0161 naujo paleisti program\u0105)
 checkbox.start.in.tray = &Startuoti sistemos juostel\u0117je
+checkbox.click.single.tray = &Naudoti vien\u0105 paspaudim\u0105 sistemos juostel\u0117je, kad pakelti Spark \u012f priek\u012f
 checkbox.tabs.on.top = &Pokalbi\u0173 korteles rodyti vir\u0161uje (reik\u0117s i\u0161 naujo paleisti program\u0105)
 checkbox.use.compression = Naudoti suspaudim\u0105
 checkbox.use.debugger.on.startup = Startavus \u012fjungti klaid\u0173 paie\u0161kos veiksen\u0105 
@@ -398,6 +401,7 @@ label.local.time = &Vietinis laikas
 label.message = \u017dinu&t\u0117
 label.message.style = \u017dinut\u0117s &stilius
 label.middle.name = &Antras vardas
+label.maximum.history.page.entries = Maksimalus \u012fra\u0161\u0173 s&kai\u010dius \u017eurnalo puslapyje
 label.minutes.before.stale.chat = &Po kiek minu\u010di\u0173 neaktyvus kambarys pasidaro blankus
 label.mobile = &Mobilaus tel. nr.
 label.name = &Vardas
@@ -818,6 +822,8 @@ status.free.to.chat = Mielai pasikalb\u0117siu
 status.on.phone = Kalbu telefonu
 status.online = Prisijung\u0119s
 status.pending = Laukiama
+status.invisible = Nematomas
+status.offline = Atsijung\u0119s
 
 tab.available.plugins = Galimi priedai
 tab.avatar = Pseudoportretas
@@ -1000,15 +1006,15 @@ lookandfeel.color.saved = Spalva i\u0161saugota
 privacy.title.preferences = Sparko privatumo nustatymai
 privacy.title.panel = Pra\u0161ome naudoti de\u0161in\u012f pel\u0117s mygtuk\u0105
 privacy.label.iq.desc = U\u017eklausa
-privacy.label.pin.desc = \u012eeinanti b\u016bsena 
-privacy.label.pout.desc = I\u0161einanti b\u016bsena
+privacy.label.pin.desc = Gaunama b\u016bsena 
+privacy.label.pout.desc = Siun\u010diama b\u016bsena
 privacy.label.msg.desc = \u017Dinut\u0117s
 privacy.border.information = Privatumo informacija
-privacy.label.information = Naudokite de\u0161inio paspaudimo meni\u0173, kad prid\u0117ti ar i\u0161trinti s\u0105ra\u0161us ar punktus 
+privacy.label.information = Naudokite de\u0161inio paspaudimo meniu, kad prid\u0117ti ar i\u0161trinti s\u0105ra\u0161us ar punktus 
 privacy.root.node = Privatumo s\u0105ra\u0161ai
 privacy.label.preferences = Privatumo \u012fskiepis
 pricacy.tooltip.preferences = Sparko privatumo nustatymai
-privacy.label.list.is.active = AKTIVUS
+privacy.label.list.is.active = AKTYVUS
 privacy.label.list.is.default = NUMATYTASIS
 privacy.border.block = Blokuoti
 privacy.pick.one.or.more = Pasirinkite vien\u0105 ar daugiau punkt\u0173, kad prid\u0117ti \u012f s\u0105ra\u0161\u0105
