Option to use hostname as a resource https://igniterealtime.org/issues/browse/SPARK-1503

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -375,6 +375,7 @@ checkbox.use.specify.below = Specify below
 checkbox.use.pki.authentication = Use PKI authentication
 checkbox.transport.tab.setting = Show available transports in tab (requires restart)
 checkbox.conference.tab.setting = Show conference service in tab (requires restart)
+checkbox.use.hostname.as.resource = Use hostname as resource
 
 delete.log.permanently = Permanently delete log
 delete.permanently = Permanently delete?
@@ -815,6 +816,7 @@ message.unable.to.load.profile = Unable to locate a profile for {0}
 message.unable.to.retrieve.last.activity = Unable to determine last activity for {0}
 message.unable.to.save.password = Unable to change password, please contact your server admin
 message.unable.to.send.file = You were unable to send the file to {0}
+message.unable.to.use.hostname.as.resource = Unable to use hostname as resource
 message.unrecoverable.error = Invalid username or password
 message.update.room.list = Update room list
 message.updating.cancelled = Updating has been canceled
